# tunedin

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Makefile  README.md  config.py  docker-compose.yml  env.example  main.py  requirements.txt
.github/workflows/: ci.yml
api/: dependencies.py  schemas.py  server.py
api/services/: recommendation_service.py
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/api/: middleware.py  server.py
backend/api/routes/: __init__.py
backend/api/services/: recommendation_service.py
backend/app/: cache.py  deps.py  faiss_index.py  main.py  metrics.py  rerank.py  router_feedback.py  router_health.py  router_rec.py  schemas.py
backend/models/: gat.py  gcn.py  graphsage.py  lightgcn.py
backend/tests/: test_health.py  test_models.py
backend/utils/: data_loader.py  evaluation.py  graph_builder.py  model_reloader.py
docker/: docker-compose.yml
docker/grafana/provisioning/dashboards/: dashboard.json
docker/prometheus/: prometheus.yml
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  global.d.ts  main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/api/auth/signup/: route.ts
frontend/src/app/contact/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/explore/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/recommend/features/: page.tsx
frontend/src/app/recommend/song/: page.tsx
frontend/src/app/recommend/user/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/status/[model]/: page.tsx
frontend/src/app/train/: page.tsx
frontend/src/components/: Footer.tsx  Navbar.tsx  PlaylistBar.tsx  Providers.tsx  SocialAuth.tsx  TrackCard.tsx
frontend/src/lib/: api.ts  auth.ts  nextAuthOptions.ts
frontend/src/pages/: Discover.tsx  Track.tsx
frontend/src/stores/: playlistStore.ts
infra/: Makefile
ml/: pyproject.toml  requirements.txt
ml/data/: README.md
ml/data/scripts/: lastfm_download.py
ml/models/: build_faiss.py  eval.py  export_embeddings.py  lightgcn.py  train.py
models/: gat.py  gcn.py  graphsage.py  lightgcn.py
tests/: README.md  test_api_endpoints.py  test_models.py
utils/: data_loader.py  evaluation.py  graph_builder.py  model_loader.py
web/: app.py
